# volplay

./: CMakeLists.txt  Readme.md
examples/: example_new_make.cpp  example_raytracer.cpp  example_surface_export.cpp  main.cpp
inc/volplay/: camera.h  fwd.h  ray_tracer.h  sdf_box.h  sdf_difference.h  sdf_displacement.h  sdf_group.h  sdf_intersection.h  sdf_make.h  sdf_making.h  sdf_node.h  sdf_node_attachment.h  sdf_node_visitor.h  sdf_plane.h  sdf_repetition.h  sdf_result.h  sdf_rigid_transform.h  sdf_sphere.h  sdf_transform.h  sdf_unary.h  sdf_union.h  types.h  volplay.h
inc/volplay/math/: root.h  sign.h
inc/volplay/rendering/: blinn_phong_image_generator.h  camera.h  depth_image_generator.h  fxaa.h  heat_image_generator.h  image.h  image_generator.h  light.h  material.h  renderer.h  saturate.h
inc/volplay/surface/: dual_contouring.h  indexed_surface.h  off_export.h  types.h
inc/volplay/util/: function_output_iterator.h  iterator_range.h  voxel_grid.h
src/: camera.cpp  ray_tracer.cpp  sdf_box.cpp  sdf_difference.cpp  sdf_displacement.cpp  sdf_group.cpp  sdf_intersection.cpp  sdf_make.cpp  sdf_making.cpp  sdf_node.cpp  sdf_node_attachment.cpp  sdf_node_visitor.cpp  sdf_plane.cpp  sdf_repetition.cpp  sdf_rigid_transform.cpp  sdf_sphere.cpp  sdf_transform.cpp  sdf_unary.cpp  sdf_union.cpp
src/rendering/: blinn_phong_image_generator.cpp  camera.cpp  depth_image_generator.cpp  fxaa.cpp  heat_image_generator.cpp  light.cpp  material.cpp  renderer.cpp
src/surface/: dual_contouring.cpp  off_export.cpp
src/util/: voxel_grid.cpp
tests/: float_comparison.hpp  test_camera.cpp  test_derivative.cpp  test_dual_contouring.cpp  test_image.cpp  test_math.cpp  test_ray_tracer.cpp  test_saturate.cpp  test_sdf_box.cpp  test_sdf_difference.cpp  test_sdf_displacement.cpp  test_sdf_intersection.cpp  test_sdf_make.cpp  test_sdf_node.cpp  test_sdf_node_visitor.cpp  test_sdf_plane.cpp  test_sdf_repetition.cpp  test_sdf_result.cpp  test_sdf_rigid_transform.cpp  test_sdf_sphere.cpp  test_sdf_transform.cpp  test_sdf_union.cpp  test_voxel_grid.cpp
